# error_Q-A

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml  rust.yml
src/: app.rs  main.rs
src/components/: avatar.rs  home.rs  login.rs  mod.rs  not_found.rs  pagination.rs  post.rs  search.rs
src/components/home/: main_content.rs  post_list.rs
src/data/: mod.rs
src/http/: email.rs  mod.rs  posts.rs
src/mocks/: mod.rs
