[package]
name = "error_qa"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
leptos_meta = { version = "0.6.5", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
log = "0.4"

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
gloo = { version = "0.11.0", features = ["timers", "futures", "storage"] }
serde = "1.0.196"
serde_json = "1.0.113"
